385 referenced wi merge fails with duplicate (#392)
* fix: fixed duplicate work item on referenced merge

Refs: #385

* fix: fixed duplicate work item on referenced merge

Refs: #385

* fix: fixed duplicate work item on referenced merge

Refs: #385