@@ -651,7 +651,7 @@ public class MergeService {
             IModule.IStructureNode destinationParentNode = context.getTargetModule().getStructureNodeOfWI(destinationParentWorkItem);
             int destinationIndex = sourceParentNode.getChildren().indexOf(sourceNode);
 
-            if (workItemToInsert.getModule() != null && !workItemToInsert.getModule().equals(context.getTargetModule())) {
+            if (!referenced && workItemToInsert.getModule() != null && !workItemToInsert.getModule().equals(context.getTargetModule())) {
                 IModule.IStructureNode sourceExternalNode = workItemToInsert.getModule().getStructureNodeOfWI(workItemToInsert);
                 IModule.IStructureNode sourceExternalParentNode = sourceExternalNode.getParent();
 
@@ -1049,7 +1049,7 @@ public class MergeService {
         }
 
         if (parentNode == null) {
-            parentNode = targetModule.getRootNode().getChildren().get(0);
+            parentNode = targetModule.getRootNode().getChildren().getFirst();
         }
 
         // getStructureNodeOfWI may return null for items which are placed in recycle bin.
